Escher CMS Change History
=========================

Version 0.9.3 [TBD]
	branch-aware CacheMonitor plugin
	page_cache_dir config setting has moved into the cache/page_cache config
	bug fix: rollback of staging branch did not always invalidate development branch caches
	update to jQuery 1.6.2
	relaxed host name match verification: now only checked for secure site and dev/staging

Version 0.9.2 [2011-07-01]
	Requires Spark/Plug v1.1.0
	integrated branch management: production, staging and development branches
	support for separate read/write databases
	drag & drop ordering of pages
	site search plugin
	atom/rss feed plugin
	<et:design:snippet> now accepts arbitrary parameters passed to snippet
	new tag: <et:design:param>, for accessing snippet parameters
	new tag: <et:pages:excerpt>
	new tag: <et:core:escape_url>
	new tags to assist with navigation previous/next links when iterating items
	new default theme
	comments plugin:
		new default snippets
		change: by default, comment processing now done prior to saving comment instead of after retrieving it
	upgraded textile library to rev 3511

Version 0.9.1 [not released]
	miscellaneous bug fixes
	enhanced password security (PHPass integrated)
	added query plugin
	added "private" attribute to <et:core:scope> tag
	synced to changes in Spark/Plug's authentication model (using SparkHasher)
	synced to changes in Spark/Plug's exception handling model
	eliminated "meta" namespace and tags; added tags: <et:pages:meta>, <et:images:meta>, <et:files:meta>, <et:links:meta>
	can associate custom metadata with images, files and links
	form plugin: allow setting default values for multiple checkboxes ("default" attribute now accepts comma-delimited list)
	added missing semicolons in some inline styles of sample site
	eliminated one level of directory hierachy in sparkplug directory
	.htaccess: moved use of header directive inside check for enabled headers module

Version 0.9.0 [2010-11-20]
	Initial Release
	Requires Spark/Plug v1.0.0