@@ -2,6 +2,8 @@ Escher CMS Change History
 =========================
 
 Version 0.9.3 [TBD]
+	changes to admin config array structure for: session, auth
+	minor change to main tag parsing regex
 	branch-aware CacheMonitor plugin
 	page_cache_dir config setting has moved into the cache/page_cache config
 	bug fix: rollback of staging branch did not always invalidate development branch caches
